# cribabies

./: .gitignore  CMakeLists.txt  README.md  init_vme.sh  modulelist.yaml  thiscribabies.sh
include/: bbcpri.h  bi-common.h  bi-config.h  libbabies.h  libbabirl.h  libbbcaenvme.h  segidlist.h  userdefine.h
include/modules/: madc32.h  sis3820.h  v1190.h  v7XX.h
init_modules/: pyproject.toml
init_modules/src/: caen_module.py  init_modules.py  madc32.py  v1190.py  v1290.py  v775.py  v785.py
src/: CMakeLists.txt  bbpid.c  bi-pid.c  cmdvme.c  cribabies.c  libbabies.c  libbbcaenvme.c
src/modules/: madc32.c  sis3820.c  v1190.c  v7XX.c
